--- a/templates/tinygo/.github/workflows/build.yml
+++ b/templates/tinygo/.github/workflows/build.yml
@@ -8,14 +8,20 @@ on:
 
 jobs:
   build:
-    runs-on: golang:1.16
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Setup Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.5
 
     - name: Install TinyGo 0.18.0
       run: |
         wget https://github.com/tinygo-org/tinygo/releases/download/v0.18.0/tinygo_0.18.0_amd64.deb
-        dpkg -i tinygo_0.18.0_amd64.deb
+        sudo dpkg -i tinygo_0.18.0_amd64.deb
 
     - name: Build
       run: make build
