--- a/templates/tinygo/.github/workflows/release.yml
+++ b/templates/tinygo/.github/workflows/release.yml
@@ -9,9 +9,10 @@ on:
 jobs:
   build:
     name: Build release assets
-    runs-on: golang:1.16
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Set the release version (tag)
       if: startsWith(github.ref, 'refs/tags/v')
@@ -23,10 +24,15 @@ jobs:
       shell: bash
       run: echo "RELEASE_VERSION=canary" >> $GITHUB_ENV
 
+    - name: Setup Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.5
+
     - name: Install TinyGo 0.18.0
       run: |
         wget https://github.com/tinygo-org/tinygo/releases/download/v0.18.0/tinygo_0.18.0_amd64.deb
-        dpkg -i tinygo_0.18.0_amd64.deb
+        sudo dpkg -i tinygo_0.18.0_amd64.deb
 
     - name: Build release
       run: make build
@@ -39,7 +45,7 @@ jobs:
 
   publish:
     name: Push released module to OCI registry
-    runs-on: golang:1.16
+    runs-on: ubuntu-latest
     needs: build
     steps:
 
